--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -1,8 +1,31 @@
-<html>
+<!DOCTYPE html>
+<html lang="pt-br">
 <head>
+    <title>EventeX - O evento mais sensacional do ano!</title>
+    <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
+    <meta name="description" content="Welcome to the Django - Sprint 01">
+    <meta name="author" content="Luis Roberto Pereira de Paula">
+
+    <link rel="stylesheet" href="{{ STATIC_URL }}css/style.css" type="text/css" media="screen" />
 </head>
 <body>
-  <h1>Eventex!</h1>
+<div id="container">
+    <header>
+        <div id="logo">&nbsp;</div>
+    </header>
+    <div id="main">
+        <h1>Bem-vindo ao EventeX!</h1>
+        <p>O evento mais sensacional do ano!</p>
+        <p>Você não pode perder essa oportunidade!</p>
+        <p class="alert">Abertura das inscrições em 20/11/2011.</p>
+        <p>Para dúvidas e mais informações entre em contato com <a href="#">eventex@eventex.com.br</a>.</p>
+    </div>
+    <footer>
+        <p>&copy; 2010 <a href="/">EventeX</a>. Some rights reserved.</p>
+    </footer>
+</div>
+
+<script src="{{ STATIC_URL }}js/jquery-1.7.min.js" type="text/javascript"></script>
+
 </body>
 </html>
-
