Removing css class

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -17,7 +17,7 @@
         <h1>Bem-vindo ao EventeX!</h1>
         <p>O evento mais sensacional do ano!</p>
         <p>Você não pode perder essa oportunidade!</p>
-        <p class="alert">Abertura das inscrições em 20/11/2011.</p>
+        <p><strong>Abertura das inscrições em 20/11/2011.</strong></p>
         <p>Para dúvidas e mais informações entre em contato com <a href="#">eventex@eventex.com.br</a>.</p>
     </div>
     <footer>
