--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -14,13 +14,15 @@
         <div id="logo">&nbsp;</div>
     </header>
     <div id="main">
-        <h1>Bem-vindo ao EventeX!</h1>
+        <h1>Bem-vindo ao EventeX</h1>
         <p>O evento mais sensacional do ano!</p>
+        <img src="{{ STATIC_URL }}img/xfiles.jpg">
         <p>Você não pode perder essa oportunidade!</p>
         <p><strong>Abertura das inscrições em 20/11/2011.</strong></p>
         <p>Para dúvidas e mais informações entre em contato com <a href="#">eventex@eventex.com.br</a>.</p>
     </div>
     <footer>
+        <a href="https://www.djangoproject.com" id="djangologo" class="hidetext" title="Powered by Django">Powered by Django</a>
         <p>&copy; 2010 <a href="/">EventeX</a>. Some rights reserved.</p>
     </footer>
 </div>
